[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/EnemyCrawling.gd" type="Script" id=2]
[ext_resource path="res://assests/images/enemy-small.png" type="Texture" id=3]
[ext_resource path="res://assests/collisions/views/EnemyCrawling.view.tres" type="Shape2D" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[node name="EnemyCrawling" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="Body" parent="." index="1"]
shape = SubResource( 1 )

[node name="ViewArea" parent="." index="3"]
visible = false

[node name="ViewAreaShape" parent="ViewArea" index="0"]
shape = ExtResource( 4 )

[node name="GroundRayFront" type="RayCast2D" parent="." index="5"]
enabled = true
cast_to = Vector2( 8, 8 )

[node name="GroundRayMid" type="RayCast2D" parent="." index="6"]
enabled = true
cast_to = Vector2( 0, 8 )

[node name="GroundRayBack" type="RayCast2D" parent="." index="7"]
position = Vector2( -4, 0 )
enabled = true
cast_to = Vector2( 0, 8 )

[node name="RotationWaitTimer" type="Timer" parent="." index="8"]
wait_time = 0.5
one_shot = true
